--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "js-sha256": "^0.9.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sequelize": "^6.28.0",
+    "tedious": "^15.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
