--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
+    "ethers": "^6.0.8",
     "express": "~4.16.1",
+    "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "js-sha256": "^0.9.0",
     "morgan": "~1.9.1",
     "sequelize": "^6.28.0",
