--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -48,6 +48,9 @@ jobs:
         npm run build --if-present
         npm run test --if-present
 
+    - name: Zip artifact for deployment
+      run: zip release.zip * .env -r
+
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
@@ -69,6 +72,12 @@ jobs:
       with:
         name: node-app
 
+    - name: unzip artifact for deployment
+      run: unzip release.zip
+
+    - name: "Delete zip file"
+      run: rm release.zip
+      
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
