--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon .bin/www"
   },
   "dependencies": {
+    "@ethersproject/address": "^5.7.0",
     "axios": "^1.2.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,7 +19,8 @@
     "firebase-admin": "^11.5.0",
     "js-sha256": "^0.9.0",
     "morgan": "~1.9.1",
-    "sequelize": "^6.28.0",
+    "mysql2": "^3.2.4",
+    "sequelize": "^6.31.1",
     "tedious": "^15.1.2"
   },
   "devDependencies": {
