--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "js-sha256": "^0.9.0",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "mysql2": "^3.2.4",
     "sequelize": "^6.31.1",
